<resources>
    <string name="app_name" translatable="false">Topzi</string>
    <string name="FACEBOOK_APP_ID" translatable="false">172172973475731</string>
    <string name="network_failure" translatable="false">Sorry! Not connected to internet</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="invitefriends" translatable="false">Invite Friends</string>
    <string name="mychannels" translatable="false">My Channels</string>
    <string name="accountsettings" translatable="false">Account Settings</string>
    <string name="chatsettings" translatable="false">Chat Settings</string>
    <string name="help" translatable="false">Help</string>
    <string name="profileinfo" translatable="false">Profile Info</string>
    <string name="name" translatable="false">Name</string>
    <string name="pleasewait" translatable="false">Please Wait..</string>
    <string name="profileinfodetail" translatable="false">Please provide your name and an\nOptional profile photo</string>
    <string name="editprofileinfo" translatable="false">Edit your Name, Mood\nAnd Profile Picture</string>
    <string name="whats_in_ur_mind" translatable="false">What\'s in your Mind?</string>
    <string name="updated_successfully" translatable="false">Updated successfully</string>
    <string name="say_something" translatable="false">Say Something</string>
    <string name="select_contact" translatable="false">Select Contact</string>
    <string name="search" translatable="false">Search</string>
    <string name="share" translatable="false">Share</string>
    <string name="shareLive" translatable="false">Share Live Location</string>
    <string name="min_15" translatable="false">15 minutes</string>
    <string name="hr_1" translatable="false">1 hour</string>
    <string name="hr_8" translatable="false">8 hours</string>
    <string name="online" translatable="false">Online</string>
    <string name="last_seen" translatable="false">Last seen</string>
    <string name="typing" translatable="false">typing..</string>
    <string name="downloaded" translatable="false">Downloaded</string>
    <string name="no_application" translatable="false">No application found to open this file</string>
    <string name="im_sure" translatable="false">I\'m Sure</string>
    <string name="nope" translatable="false">Nope</string>
    <string name="really_delete_chat_history" translatable="false">Do you really want to Delete this chat history?</string>
    <string name="really_delete_chat" translatable="false">Do you really want to Delete this chat?</string>
    <string name="really_block_chat" translatable="false">Do you really want to Block this person?</string>
    <string name="mute_notification" translatable="false">Mute Notification</string>
    <string name="unmute_notification" translatable="false">Unmute Notification</string>
    <string name="block" translatable="false">Block</string>
    <string name="clear_chat" translatable="false">Clear Chat</string>
    <string name="hide_chat" translatable="false">Hide Chat</string>
    <string name="unblock" translatable="false">Unblock</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">a6dd1cdec9e557684aa3c8c59e9eaab1</string>
    <string name="notification_channel_id" translatable="false">topzi_notification_channel</string>
    <string name="notification_channel_foreground_service" translatable="false">topzi_notification_channel_foreground_service</string>
    <string name="notification_call_id" translatable="false">topzi_incoming_call</string>
    <string name="title_activity_profile_info" translatable="false">ProfileInfo</string>
    <string name="pick_image_intent_text" translatable="false">Choose an image</string>
    <string name="something_wrong" translatable="false">Something Went Wrong</string>
    <string name="continuekey" translatable="false">Connect</string>
    <string name="welcome_title1" translatable="false">Channel</string>
    <string name="welcome_title2" translatable="false">Favourites</string>
    <string name="welcome_title3" translatable="false">Audio Video Call</string>
    <string name="welcome_des1" translatable="false">Be Unique, Discover yourself and make others discover you by creating your own channel.</string>
    <string name="welcome_des2" translatable="false">Favorite your loved ones which will be available on the top of the chat.</string>
    <string name="welcome_des3" translatable="false">Touch with your friends always by making audio and video chats.</string>
    <string name="save" translatable="false">save</string>
    <string name="privacy" translatable="false">Privacy</string>
    <string name="change_number" translatable="false">Change Number</string>
    <string name="delete_account" translatable="false">Delete Account</string>
    <string name="lock_pattern" translatable="false">Lock Pattern</string>
    <string name="english" translatable="false">English</string>
    <string name="none" translatable="false">None</string>
    <string name="pattern" translatable="false">Pattern</string>
    <string name="messaging" translatable="false">Messaging</string>
    <string name="my_contacts" translatable="false">My Contacts</string>
    <string name="about" translatable="false">About</string>
    <string name="readRece" translatable="false">Read receipts</string>
    <string name="recent_media" translatable="false">Recent Media</string>
    <string name="blocked_contacts" translatable="false">Blocked Contacts</string>
    <string name="list_of_contacts_that_you_have_blocked" translatable="false">List of contacts that you have blocked</string>
    <string name="read_receipts" translatable="false">Read Receipts</string>
    <string name="profile_photo" translatable="false">Profile Photo</string>
    <string name="everyone" translatable="false">Everyone</string>
    <string name="readPrivacy" translatable="false">If turned off, you won\'t send or receive Read receipts. Read receipts are always send for group chats.</string>
    <string name="who_can_see_my_personal_info" translatable="false">Who Can See My Personal Info</string>
    <string name="nobody" translatable="false">Nobody</string>
    <string name="account" translatable="false">Account</string>
    <string name="status" translatable="false">Status</string>
    <string name="user_name" translatable="false">User Name</string>
    <string name="mobile" translatable="false">Mobile</string>
    <string name="mute_notifications" translatable="false">Mute Notifications</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="select_language" translatable="false">Select language</string>
    <string name="french" translatable="false">French</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="do_you_want_to_logout" translatable="false">Do you want to Logout?</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="group" translatable="false">Group</string>
    <string name="calls" translatable="false">Calls</string>
    <string name="yesterday" translatable="false">Yesterday</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="view_and_edit" translatable="false">View and Edit</string>
    <string name="add_contact" translatable="false">Add Contact</string>
    <string name="about_blank" translatable="false">About should not be blank</string>
    <string name="really_unblock_chat" translatable="false">Do you really want to Unblock this person?</string>
    <string name="create_group" translatable="false">Create Group</string>
    <string name="selected" translatable="false">selected</string>
    <string name="of" translatable="false">of</string>
    <string name="add_peoples" translatable="false">Add Peoples</string>
    <string name="participation" translatable="false">Participation</string>
    <string name="name_your_group" translatable="false">Name Your Group</string>
    <string name="enter_group_name" translatable="false">Enter Group Name</string>
    <string name="select_atleast_one_members" translatable="false">Atleast add one participant in group</string>
    <string name="please_enter_your_new_country_code_and_phone_number" translatable="false">Please Enter Your New Country Code and Phone Number</string>
    <string name="created_at" translatable="false">Created at</string>
    <string name="shared_media" translatable="false">Shared Media</string>
    <string name="view_all" translatable="false">View All</string>
    <string name="group_events" translatable="false">Group Events</string>
    <string name="admin" translatable="false">Admin</string>
    <string name="participants" translatable="false">Participants</string>
    <string name="add" translatable="false">Add</string>
    <string name="created_by" translatable="false">Created by</string>
    <string name="no_recent" translatable="false">No Recent Chat</string>
    <string name="no_media" translatable="false">No media found</string>
    <string name="unblock_message" translatable="false">Unblock this person to start a chat</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="at" translatable="false">at</string>
    <string name="remove" translatable="false">Remove</string>
    <string name="make_group_admin" translatable="false">Make Group Admin</string>
    <string name="view" translatable="false">View</string>
    <string name="message" translatable="false">Message</string>
    <string name="make" translatable="false">Make</string>
    <string name="as_admin" translatable="false">as Admin</string>
    <string name="you" translatable="false">You</string>
    <string name="from_admin" translatable="false">from Admin</string>
    <string name="delete_group" translatable="false">Delete Group</string>
    <string name="exit_group" translatable="false">Exit Group</string>
    <string name="edit_group" translatable="false">Edit Group</string>
    <string name="enter_new_subject" translatable="false">Enter New Subject</string>
    <string name="offline" translatable="false">offline</string>
    <string name="really_exit_group" translatable="false">Do you really want to Exit this group?</string>
    <string name="not_group_member" translatable="false">You are no longer member in this group</string>
    <string name="pref_speakerphone_key" translatable="false">speakerphone_preference</string>
    <string name="pref_speakerphone_title" translatable="false">Speakerphone.</string>
    <string name="pref_speakerphone_dlg" translatable="false">Speakerphone.</string>
    <string name="pref_speakerphone_default" translatable="false">auto</string>
    <string name="ringing" translatable="false">Ringing...</string>
    <string name="audio_calling" translatable="false">Audio Calling</string>
    <string name="video_calling" translatable="false">Video Calling</string>
    <string name="exit_channel" translatable="false">Exit Channel</string>
    <string name="mark_favourite" translatable="false">Mark Favourite</string>
    <string name="country_code_phone_number" translatable="false">+Country code Phone number</string>
    <string name="view_contact" translatable="false">View Contact</string>
    <string name="delete_chat" translatable="false">Delete Chat</string>
    <string name="enter_otp" translatable="false">Enter otp</string>
    <string name="abixWeb" translatable="false">Topzi Web</string>
    <string name="generate_otp" translatable="false">Generate otp</string>
    <string name="verify_sign_in" translatable="false">Verify sign in</string>
    <string name="app_language">App Language</string>
    <string name="notifications">Notifications</string>
</resources>