<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_curved_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/message"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/txtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/view"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/txtMakeAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/make_group_admin"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/txtRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/remove"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/txtContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/add_contact"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>