<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_curved_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/txtFavourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/mark_favourite"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/txtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/view_contact"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/txtClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/clear_chat"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/delete_chat"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/txtHideChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/hide_chat"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/txtArchive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/font_regular"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="Unrchive"
            android:textColor="@color/primarytext"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

</RelativeLayout>